--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,70 @@
 .App {
+  background-color: rgb(246, 250, 253);
+  padding: 20px 0 0 0;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#photos {
+  margin: 184px 70px 0 70px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#header-title {
+  width: 100%;
+  background: rgb(233,239,248);
+  background: linear-gradient(90deg, rgba(233,239,248) 50%, rgb(246, 250, 253) 100%);
+  float: left;
+  height: 140px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#header-image-div {
+  float: left;
+  margin: 34px 0 0 90px;
 }
 
-.App-link {
-  color: #61dafb;
+#header-h1-div {
+  margin: 0 0 0 180px;
+}
+
+h1 {
+  color: rgb(103, 126, 156);
+  font-size: 50px;
+  font-family: 'Codystar', cursive;
+  letter-spacing: 3px;
+  margin: 44px 0 0 0;
+  text-align: left;
+}
+
+.actions {
+  margin: 0 0 0 68%;
+}
+
+.filter {
+  border: 1px solid grey;
+}
+
+#toggle {
+  width: 186%;
+}
+
+.grayscale {
+  filter: grayscale();
+}
+
+#grayscale {
+  color: gray;
+  font-size: 20px;
+}
+
+#color {
+  background-image: linear-gradient(to left, violet, indigo, blue, green, orange, red);   -webkit-background-clip: text;
+  color: transparent;
+  font-size: 20px;
+  font-weight: bolder;
+}
+
+.image {
+  border-radius: 5%;
+  filter: drop-shadow(0 0 0.5rem rgb(103, 126, 156));
 }
 
 @keyframes App-logo-spin {
@@ -34,5 +73,11 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
   }
 }
