--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   background-color: rgb(246, 250, 253);
+  font-family: Montserrat;
   padding: 20px 0 0 0;
   text-align: center;
 }
@@ -35,32 +36,38 @@ h1 {
 }
 
 .actions {
-  margin: 0 0 0 68%;
+  margin: 0 0 0 76%;
 }
 
 .filter-title {
   font-size: 20px;
-  padding: 10px 20px 0 0;
+  padding: 8px 0 0 0;
+  position: absolute;
+  right: 27%;
 }
 
 .filter {
+  background-color: white;
   border: 1px solid grey;
   border-radius: 5px;
-  font-size: 20px;
-  padding: 8px 0 0 0;
+  cursor: pointer;
+  display: grid;
+  font-size: 16px;
+  padding: 8px;
+  position: absolute;
+  width: 150px;
+  z-index: 2;
 }
 
 #toggle {
-  width: 186%;
-}
-
-.grayscale {
-  filter: grayscale();
+  padding: 4px 0 0 0;
 }
 
 #grayscale {
   color: gray;
   font-size: 20px;
+  padding: 0 0 0 82px;
+  margin: 0 0 0 50px;
 }
 
 #color {
